removed wriver wrapper and deprecated api call